# equalize_it

./: .gitignore  .gitmodules  .prettierrc  CMakeLists.txt  README.md
public/: CMakeLists.txt
scripts/: setup.iss
src/: CMakeLists.txt  main.cpp
src/app/: app.hpp  editor.cpp  editor.hpp  processor.cpp  processor.hpp
src/app/analyzer/: editor.cpp  editor.hpp  processor.hpp
src/app/analyzer/plot/: plot.cpp  plot.hpp  spectrum.cpp  spectrum.hpp
src/app/equalizer/: editor.cpp  editor.hpp  processor.hpp
src/app/equalizer/plot/: plot.cpp  plot.hpp  spectrum.cpp  spectrum.hpp
src/pages/: pages.hpp
src/pages/home/: home.cpp  home.hpp
src/pages/home/equalizer/: equalizer.cpp  equalizer.hpp
src/pages/home/equalizer/ui/: analyzer.cpp  analyzer.hpp  constants.hpp  equalizer_response.cpp  equalizer_response.hpp  filter.cpp  filter.hpp  filter_button.cpp  filter_button.hpp  filter_panel.cpp  filter_panel.hpp  filter_response.cpp  filter_response.hpp  frequency_response.cpp  frequency_response.hpp  grid.cpp  grid.hpp  ui.hpp
src/pages/home/gain/: gain.cpp  gain.hpp
src/pages/home/gain/ui/: bar.cpp  bar.hpp  constants.hpp  level_meter.cpp  level_meter.hpp  scale.cpp  scale.hpp
src/shared/: constants.hpp  shared.hpp  types.hpp
src/shared/constants/: constants.hpp
src/shared/core/: core.hpp
src/shared/core/audio/: spectrogram.cpp  spectrogram.hpp  window.cpp  window.hpp
src/shared/core/graphics/: average_points.cpp  average_points.hpp
src/shared/dsp/: dsp.hpp  fft.cpp  fft.hpp  spectrogram.cpp  spectrogram.hpp  window.cpp  window.hpp
src/shared/lib/: base_component.hpp  base_editor.hpp  base_processor.hpp  lib.hpp
src/shared/math/: mapping.cpp  mapping.hpp  math.hpp  smoothing.cpp  smoothing.hpp
src/shared/parameters/: equalizer.hpp  filter.hpp  gain.hpp  parameters.hpp
src/shared/proccessors/: analyzer.cpp  analyzer.hpp  base_processor.hpp  cascade_processor.hpp  equalizer.cpp  equalizer.hpp  filter.cpp  filter.hpp  gain.cpp  gain.hpp  plugin.cpp  plugin.hpp  processors.hpp
src/shared/proccessors/lib/: base.hpp  base_processor.hpp  cascade.hpp  cascade_processor.hpp  lib.hpp
src/shared/ui/: colours.cpp  colours.hpp  fonts.hpp  icon_button.cpp  icon_button.hpp  label_rotary_slider.cpp  label_rotary_slider.hpp  layout_component.hpp  look_and_feel.cpp  look_and_feel.hpp  paths.cpp  paths.hpp  slider.cpp  slider.hpp  ui.hpp
src/widgets/: widgets.hpp
src/widgets/layout/: header.cpp  header.hpp  layout.hpp
src/widgets/layout/header/: header.cpp  header.hpp
src/widgets/layout/header/ui/: logo.cpp  logo.hpp  right_buttons_stack.cpp  right_buttons_stack.hpp  ui.hpp
